--- a/setup.cfg
+++ b/setup.cfg
@@ -6,9 +6,9 @@ author_email = antanasbendoraitis7@gmail.com
 description = Package that contains ECDSA arithmetics and Merkle tree root calculation
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pypa/sampleproject
+url = https://github.com/antanasbendoraitis/mini-cryptography.git
 project_urls =
-    Bug Tracker = https://github.com/pypa/sampleproject/issues
+    Bug Tracker = https://github.com/Duomenu-saugojimo-sistema/Duomenu-saugojimo-sistema-paremta-bloku-grandines-technologija/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
