--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = mini–cryptography–tools
+name = mini–cryptography
 version = 0.0.1
 author = Antanas Bendoraitis
 author_email = antanasbendoraitis7@gmail.com
